New benchmark implementation for Helidon that includes Nima support (#7614)
* Initial changes to support Helidon 4 reactive and nima benchmarks running with ALPHA1 and JDK 19.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Renamed docker files, updated configuration and fixed returned media type.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Use 0.0.0.0 for IP to bind all interfaces (Docker network). Provide fake endpoints for unimplemented tests.

* Implemented all Db operations using pgclient and vertx (like the original implementation). There are still some failures with a large number of concurrent Db queries/updates.

* Created new internal Db methods for better handling of clients. Verification is now passing for all tests.

* Changes to pool SQL pool creation to fix latency problems. Now using single, shared pool whose size is configurable via config.

* Set write queue size to 1K to avoid OOM errors.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Updated test metadata and removed JVM options.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Set a larger SQL pool size.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Use a separate connection pool for updates.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Implementation of alternative Db repository using JDBC/Hikari. Default still set to pgclient.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Added support for batch updates with pgclient. See application.yaml for more info.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* Adjusted timeout.

Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>

* New implementation for query.

Signed-off-by: Santiago Pericasgeertsen <s