@@ -17,18 +17,16 @@ ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
 WORKDIR /helidon
-COPY reactive/src src
-COPY reactive/pom.xml pom.xml
+COPY nima/src src
+COPY nima/pom.xml pom.xml
 RUN mvn package -q
 
 FROM openjdk:19-jdk-slim
 WORKDIR /helidon
 COPY --from=maven /helidon/target/libs libs
-COPY --from=maven /helidon/target/benchmark-reactive.jar app.jar
+COPY --from=maven /helidon/target/benchmark-nima.jar app.jar
 
 EXPOSE 8080
 
-CMD java -server \
-    -Dio.netty.buffer.checkBounds=false \
-    -Dio.netty.buffer.checkAccessible=false \
+CMD java --enable-preview \
     -jar app.jar
